force-app/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <label>Work Location</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work_Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>